--- a/css/important.css
+++ b/css/important.css
@@ -60,7 +60,7 @@ body {
 .container {
     max-width: 1200px;
     margin: 20px auto;
-    background-color:rgb(0, 119, 182); 
+    background-color:rgba(1, 153, 100, 0.539); 
     padding: 20px;
     border-radius: 10px; 
 }
@@ -82,7 +82,7 @@ body {
     
 }
 .card.text-dark.bg-light {
-    border-bottom: 4px solid rgb(0, 119, 182); 
+    border-bottom: 4px solid rgb(1, 153, 100, 0.539); 
 }
 .ribbon {
     position: absolute;
@@ -90,7 +90,7 @@ body {
     left: -5px;
     width: 60px;
     height: 25px;
-    background: rgb(0, 119, 182);
+    background: rgb(1, 153, 100, 0.539);
     clip-path: polygon(0% 0%, 80% 0%, 100% 50%, 80% 100%, 0% 100%);
 }
 .user-icons {
@@ -116,9 +116,10 @@ body {
 }
 
 .plus-icon { 
-    background:  rgb(0, 119, 182);
+    background:  rgb(1, 153, 100, 0.539);
 }
 .containermt-4{
 
     padding-top: 80px; 
 }
+
